--- a/game.html
+++ b/game.html
@@ -13,10 +13,14 @@
   <div class="canvas-container">
     <canvas id="canvas" width="1200" height="1200"></canvas>
     <canvas id="canvas-cow"></canvas>
+    <canvas id="canvas-ufo"></canvas>
+    <canvas id="canvas-ufo-2"></canvas>
+
   </div>
 
   <script src="./js/background.js"></script>
-  <script src="./js/cow.js"></script>
+  <script src="./js/ufo.js"></script>
+  <script src="./js/character.js"></script>
 </body>
 
 </html>
