--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <div class="how-to-play">
       <h1 class="header-how-to-play">HOW TO PLAY</h1>
       <img class="arrow-key-how-to-play" src="./Images/arrowkeys.png" alt="arrow-keys">
-      <h3 class="text-how-to-play">USE THE ARROW KEYS TO HELP TIMMY THE COW NOT GET ABDUCTED!
-        <br>HAVE FUN!
+      <h3 class="text-how-to-play">USE THE ARROW KEYS TO HELP TIMMY NOT GET ABDUCTED!
+        <br>GOOD LUCK!
       </h3>
     </div>
     <canvas id="home-page" width="0" height="165"></canvas>
