--- a/game.html
+++ b/game.html
@@ -10,17 +10,25 @@
 </head>
 
 <body>
+  <div class="game-intro">
+    <button id="start-button">StartGame</button>
+  </div>
   <div class="canvas-container">
-    <canvas id="canvas" width="1200" height="1200"></canvas>
+    <canvas id="game-board" width="500" height="600"></canvas>
+    <!-- <canvas id="canvas" width="1200" height="1200"></canvas> -->
     <canvas id="canvas-cow"></canvas>
     <canvas id="canvas-ufo"></canvas>
-    <canvas id="canvas-ufo-2"></canvas>
-
   </div>
+
+
+
+
 
   <script src="./js/background.js"></script>
   <script src="./js/ufo.js"></script>
   <script src="./js/character.js"></script>
+  <script src="./js/laser.js"></script>
+
 </body>
 
 </html>
