--- a/game.html
+++ b/game.html
@@ -11,11 +11,11 @@
 
 <body>
   <div class="game-intro">
-    <button id="start-button">StartGame</button>
+    <!-- <button id="start-button">StartGame</button> -->
   </div>
   <div class="canvas-container">
-    <canvas id="game-board" width="500" height="600"></canvas>
-    <!-- <canvas id="canvas" width="1200" height="1200"></canvas> -->
+    <!-- <canvas id="game-board" width="500" height="600"></canvas> -->
+    <canvas id="canvas" width="1200" height="1200"></canvas>
     <canvas id="canvas-cow"></canvas>
     <canvas id="canvas-ufo"></canvas>
   </div>
@@ -24,10 +24,12 @@
 
 
 
+
+
   <script src="./js/background.js"></script>
   <script src="./js/ufo.js"></script>
   <script src="./js/character.js"></script>
-  <script src="./js/laser.js"></script>
+  <!-- <script src="./js/laser.js"></script> -->
 
 </body>
 
