--- a/game.html
+++ b/game.html
@@ -10,27 +10,40 @@
 </head>
 
 <body>
-  <div class="game-intro">
-    <!-- <button id="start-button">StartGame</button> -->
+  <div class="wrapper">
+
+
+    <div class="game-title">
+      <h1>Last Man On Earth </h1>
+    </div>
+
+    <div class="canvas-container">
+      <!-- <canvas id="game-board" width="500" height="600"></canvas> -->
+      <canvas id="canvas"></canvas>
+      <canvas id="canvas-cow"></canvas>
+      <canvas id="canvas-ufo"></canvas>
+    </div>
+
   </div>
-  <div class="canvas-container">
-    <!-- <canvas id="game-board" width="500" height="600"></canvas> -->
-    <canvas id="canvas" width="1200" height="1200"></canvas>
-    <canvas id="canvas-cow"></canvas>
-    <canvas id="canvas-ufo"></canvas>
-  </div>
+  <!-- Wrapper -->
 
 
 
-
-
-
-
+  <footer class="footer-container">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore blanditiis ea corrupti tempore expedita facere sint
+      nisi mollitia laudantium, excepturi esse quas iure quaerat corpo ris numquam quibusdam quos. Dignissimos, vitae!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore blanditiis ea corrupti tempore expedita facere sint
+      nisi mollitia laudantium, excepturi esse quas iure quaerat corpo ris numquam quibusdam quos. Dignissimos, vitae!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore blanditiis ea corrupti tempore expedita facere sint
+      nisi mollitia laudantium, excepturi esse quas iure quaerat corpo ris numquam quibusdam quos. Dignissimos, vitae!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore blanditiis ea corrupti tempore expedita facere sint
+      nisi mollitia laudantium, excepturi esse quas iure quaerat corpo ris numquam quibusdam quos. Dignissimos, vitae!</p>
+  </footer>
   <script src="./js/background.js"></script>
+  <script src="./js/obstacle.js"></script>
   <script src="./js/ufo.js"></script>
   <script src="./js/character.js"></script>
   <!-- <script src="./js/laser.js"></script> -->
-
 </body>
 
 </html>
