--- a/game.html
+++ b/game.html
@@ -13,32 +13,34 @@
   <div class="wrapper">
 
 
-    <div class="game-title">
-      <h1>Last Man On Earth </h1>
-    </div>
-
     <div class="canvas-container">
+      <div class="game-title">
+        <h1>Last Man On Earth </h1>
+      </div>
+
       <!-- <canvas id="game-board" width="500" height="600"></canvas> -->
       <canvas id="canvas"></canvas>
       <canvas id="canvas-cow"></canvas>
       <canvas id="canvas-ufo"></canvas>
+
     </div>
+    <!-- Canvas-container -->
 
+
+
+    <footer class="footer-container">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore blanditiis ea corrupti tempore expedita facere sint
+        nisi mollitia laudantium, excepturi esse quas iure quaerat corpo ris numquam quibusdam quos. Dignissimos, vitae!</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore blanditiis ea corrupti tempore expedita facere sint
+        nisi mollitia laudantium, excepturi esse quas iure quaerat corpo ris numquam quibusdam quos. Dignissimos, vitae!</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore blanditiis ea corrupti tempore expedita facere sint
+        nisi mollitia laudantium, excepturi esse quas iure quaerat corpo ris numquam quibusdam quos. Dignissimos, vitae!</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore blanditiis ea corrupti tempore expedita facere sint
+        nisi mollitia laudantium, excepturi esse quas iure quaerat corpo ris numquam quibusdam quos. Dignissimos, vitae!</p>
+    </footer>
   </div>
-  <!-- Wrapper -->
+  <!-- wrapper -->
 
-
-
-  <footer class="footer-container">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore blanditiis ea corrupti tempore expedita facere sint
-      nisi mollitia laudantium, excepturi esse quas iure quaerat corpo ris numquam quibusdam quos. Dignissimos, vitae!</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore blanditiis ea corrupti tempore expedita facere sint
-      nisi mollitia laudantium, excepturi esse quas iure quaerat corpo ris numquam quibusdam quos. Dignissimos, vitae!</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore blanditiis ea corrupti tempore expedita facere sint
-      nisi mollitia laudantium, excepturi esse quas iure quaerat corpo ris numquam quibusdam quos. Dignissimos, vitae!</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore blanditiis ea corrupti tempore expedita facere sint
-      nisi mollitia laudantium, excepturi esse quas iure quaerat corpo ris numquam quibusdam quos. Dignissimos, vitae!</p>
-  </footer>
   <script src="./js/background.js"></script>
   <script src="./js/obstacle.js"></script>
   <script src="./js/ufo.js"></script>
