--- a/game.html
+++ b/game.html
@@ -22,6 +22,7 @@
       <canvas id="canvas"></canvas>
       <canvas id="canvas-cow"></canvas>
       <canvas id="canvas-ufo"></canvas>
+      <canvas id="canvas-laser"></canvas>
 
     </div>
     <!-- Canvas-container -->
@@ -45,7 +46,7 @@
   <script src="./js/obstacle.js"></script>
   <script src="./js/ufo.js"></script>
   <script src="./js/character.js"></script>
-  <!-- <script src="./js/laser.js"></script> -->
+  <script src="./js/laser.js"></script>
 </body>
 
 </html>
