--- a/game.html
+++ b/game.html
@@ -5,17 +5,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Last Man On Earth</title>
   <link rel="stylesheet" media="screen" href="./css/styles.css" />
 </head>
 
 <body>
   <div class="wrapper">
-
-
     <div class="canvas-container">
       <div class="game-title">
         <h1>Last Man On Earth </h1>
+        <!-- <h2 class="score">SCORE:</h2> -->
       </div>
 
       <!-- <canvas id="game-board" width="500" height="600"></canvas> -->
@@ -29,7 +28,7 @@
 
 
 
-    <footer class="footer-container">
+    <!-- <footer class="footer-container">
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore blanditiis ea corrupti tempore expedita facere sint
         nisi mollitia laudantium, excepturi esse quas iure quaerat corpo ris numquam quibusdam quos. Dignissimos, vitae!</p>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore blanditiis ea corrupti tempore expedita facere sint
@@ -38,7 +37,7 @@
         nisi mollitia laudantium, excepturi esse quas iure quaerat corpo ris numquam quibusdam quos. Dignissimos, vitae!</p>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore blanditiis ea corrupti tempore expedita facere sint
         nisi mollitia laudantium, excepturi esse quas iure quaerat corpo ris numquam quibusdam quos. Dignissimos, vitae!</p>
-    </footer>
+    </footer> -->
   </div>
   <!-- wrapper -->
 
