--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h3 class="text-how-to-play">USE THE ARROW KEYS TO HELP TIMMY NOT GET ABDUCTED!
       <br>GOOD LUCK!
     </h3>
-    <h1>LAST MAN ON EARTH</h1>
+    <h1 class="name-of-game">LAST MAN ON EARTH</h1>
   </div>
   <canvas id="home-page" width="0" height="165"></canvas>
 
