--- a/game.html
+++ b/game.html
@@ -12,39 +12,32 @@
 <body>
   <div class="wrapper">
     <div class="canvas-container">
-      <div class="game-title">
-        <h1>Last Man On Earth </h1>
-      </div>
 
       <!-- <canvas id="game-board" width="500" height="600"></canvas> -->
       <canvas id="canvas"></canvas>
       <canvas id="canvas-cow"></canvas>
       <canvas id="canvas-ufo"></canvas>
-      <canvas id="canvas-laser"></canvas>
+      <!-- <canvas id="canvas-laser"></canvas> -->
 
+    </div>
+    <div class="game-title">
+      <h1>Last Man On Earth </h1>
     </div>
     <!-- Canvas-container -->
 
 
 
-    <!-- <footer class="footer-container">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore blanditiis ea corrupti tempore expedita facere sint
-        nisi mollitia laudantium, excepturi esse quas iure quaerat corpo ris numquam quibusdam quos. Dignissimos, vitae!</p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore blanditiis ea corrupti tempore expedita facere sint
-        nisi mollitia laudantium, excepturi esse quas iure quaerat corpo ris numquam quibusdam quos. Dignissimos, vitae!</p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore blanditiis ea corrupti tempore expedita facere sint
-        nisi mollitia laudantium, excepturi esse quas iure quaerat corpo ris numquam quibusdam quos. Dignissimos, vitae!</p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore blanditiis ea corrupti tempore expedita facere sint
-        nisi mollitia laudantium, excepturi esse quas iure quaerat corpo ris numquam quibusdam quos. Dignissimos, vitae!</p>
-    </footer> -->
+
   </div>
   <!-- wrapper -->
 
+  <script src="./js/score.js"></script>
   <script src="./js/background.js"></script>
   <script src="./js/obstacle.js"></script>
   <script src="./js/ufo.js"></script>
   <script src="./js/character.js"></script>
   <script src="./js/laser.js"></script>
+
 </body>
 
 </html>
