added btn so users can go back to main page

--- a/game.html
+++ b/game.html
@@ -24,10 +24,9 @@
       <h1>Last Man On Earth </h1>
     </div>
     <!-- Canvas-container -->
-
-
-
-
+    <button>
+      <a href="index.html">Go Back to Main Page</a>
+    </button>
   </div>
   <!-- wrapper -->
 
