--- a/game.html
+++ b/game.html
@@ -1,50 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Last Man On Earth</title>
+    <link rel="stylesheet" media="screen" href="./css/styles.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Last Man On Earth</title>
-  <link rel="stylesheet" media="screen" href="./css/styles.css" />
-</head>
-
-<body>
-  <div class="wrapper">
-    <div class="canvas-container">
-      <div class="game-title">
-        <h1>Last Man On Earth </h1>
+  <body>
+    <div class="wrapper">
+      <div class="canvas-container">
+        <!-- <canvas id="game-board" width="500" height="600"></canvas> -->
+        <canvas id="canvas"></canvas> <canvas id="canvas-cow"></canvas>
+        <canvas id="canvas-ufo"></canvas>
+        <!-- <canvas id="canvas-laser"></canvas> -->
       </div>
-
-      <!-- <canvas id="game-board" width="500" height="600"></canvas> -->
-      <canvas id="canvas"></canvas>
-      <canvas id="canvas-cow"></canvas>
-      <canvas id="canvas-ufo"></canvas>
-      <canvas id="canvas-laser"></canvas>
-
+      <div class="game-title"><h1>Last Man On Earth</h1></div>
+      <!-- Canvas-container -->
+      <button><a href="index.html">Go Back to Main Page</a></button>
     </div>
-    <!-- Canvas-container -->
+    <!-- wrapper -->
 
-
-
-    <!-- <footer class="footer-container">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore blanditiis ea corrupti tempore expedita facere sint
-        nisi mollitia laudantium, excepturi esse quas iure quaerat corpo ris numquam quibusdam quos. Dignissimos, vitae!</p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore blanditiis ea corrupti tempore expedita facere sint
-        nisi mollitia laudantium, excepturi esse quas iure quaerat corpo ris numquam quibusdam quos. Dignissimos, vitae!</p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore blanditiis ea corrupti tempore expedita facere sint
-        nisi mollitia laudantium, excepturi esse quas iure quaerat corpo ris numquam quibusdam quos. Dignissimos, vitae!</p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore blanditiis ea corrupti tempore expedita facere sint
-        nisi mollitia laudantium, excepturi esse quas iure quaerat corpo ris numquam quibusdam quos. Dignissimos, vitae!</p>
-    </footer> -->
-  </div>
-  <!-- wrapper -->
-
-  <script src="./js/background.js"></script>
-  <script src="./js/obstacle.js"></script>
-  <script src="./js/ufo.js"></script>
-  <script src="./js/character.js"></script>
-  <script src="./js/laser.js"></script>
-</body>
-
+    <!-- <script src="./js/score.js"></script> -->
+    <script src="./js/background.js"></script>
+    <script src="./js/obstacle.js"></script>
+    <script src="./js/ufo.js"></script>
+    <script src="./js/character.js"></script>
+    <script src="./js/laser.js"></script>
+  </body>
 </html>
