removed excessive black space

--- a/game.html
+++ b/game.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<<<<<<< HEAD
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -17,10 +16,11 @@
         <canvas id="canvas-ufo"></canvas>
         <!-- <canvas id="canvas-laser"></canvas> -->
       </div>
-      <div class="game-title"><h1>Last Man On Earth</h1></div>
+      <!-- <div class="game-title"><h1>Last Man On Earth</h1></div>
       <!-- Canvas-container -->
-      <button><a href="index.html">Go Back to Main Page</a></button>
-    </div>
+      <!-- <button><a href="index.html">Go Back to Main Page</a></button> -->
+    <!-- </div> -->
+    -->
     <!-- wrapper -->
 
     <!-- <script src="./js/score.js"></script> -->
@@ -31,45 +31,3 @@
     <script src="./js/laser.js"></script>
   </body>
 </html>
-=======
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Last Man On Earth</title>
-  <link rel="stylesheet" media="screen" href="./css/styles.css" />
-</head>
-
-<body>
-  <div class="wrapper">
-    <div class="canvas-container">
-
-      <!-- <canvas id="game-board" width="500" height="600"></canvas> -->
-      <canvas id="canvas"></canvas>
-      <canvas id="canvas-cow"></canvas>
-      <canvas id="canvas-ufo"></canvas>
-      <!-- <canvas id="canvas-laser"></canvas> -->
-
-    </div>
-    <div class="game-title">
-      <h1>Last Man On Earth </h1>
-    </div>
-    <!-- Canvas-container -->
-    <button>
-      <a href="index.html">Go Back to Main Page</a>
-    </button>
-  </div>
-  <!-- wrapper -->
-
-  <script src="./js/score.js"></script>
-  <script src="./js/background.js"></script>
-  <script src="./js/obstacle.js"></script>
-  <script src="./js/ufo.js"></script>
-  <script src="./js/character.js"></script>
-  <script src="./js/laser.js"></script>
-
-</body>
-
-</html>
->>>>>>> 0d76de631313d294c0947ded1970e9bd8049e60a
