--- a/index.html
+++ b/index.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Last Man On Earth</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" media="screen" href="./css/styles.css" />
+  </head>
 
-<head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Last Man On Earth</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" media="screen" href="./css/styles.css" />
-</head>
-
-<body>
-  <div class="container">
-    <input id="start-game-btn" type="button" onclick="window.location.href='game.html'" value="START GAME">
-    <h1 class="header-how-to-play">HOW TO PLAY</h1>
-    <img class="arrow-key-how-to-play" src="./Images/arrowkeys.png" alt="arrow-keys">
-    <h3 class="text-how-to-play">USE THE ARROW KEYS TO HELP TIMMY NOT GET ABDUCTED!
-      <br>GOOD LUCK!
-    </h3>
-    <h1 class="name-of-game">LAST MAN ON EARTH</h1>
-  </div>
-  <canvas id="home-page" width="0" height="165"></canvas>
-
-
-</body>
-
+  <body>
+    <div class="container">
+      <input
+        id="start-game-btn"
+        type="button"
+        onclick="window.location.href='game.html'"
+        value="START GAME"
+      />
+      <h1 class="header-how-to-play">HOW TO PLAY</h1>
+      <img
+        class="arrow-key-how-to-play"
+        src="./Images/arrowkeys.png"
+        alt="arrow-keys"
+      />
+      <h3 class="text-how-to-play">
+        USE THE ARROW KEYS TO HELP TIMMY NOT GET ABDUCTED! <br />GOOD LUCK!
+      </h3>
+      <h1 class="name-of-game">LAST MAN ON EARTH</h1>
+    </div>
+  </body>
 </html>
