--- a/index.html
+++ b/index.html
@@ -10,22 +10,24 @@
 
   <body>
     <div class="container">
+      <h1 class="name-of-game">LAST MAN ON EARTH</h1>
       <input
         id="start-game-btn"
         type="button"
         onclick="window.location.href='game.html'"
         value="START GAME"
       />
-      <h1 class="header-how-to-play">HOW TO PLAY</h1>
-      <img
-        class="arrow-key-how-to-play"
-        src="./Images/arrowkeys.png"
-        alt="arrow-keys"
-      />
-      <h3 class="text-how-to-play">
-        USE THE ARROW KEYS TO HELP TIMMY NOT GET ABDUCTED! <br />GOOD LUCK!
-      </h3>
-      <h1 class="name-of-game">LAST MAN ON EARTH</h1>
+      <fieldset>
+        <h1 class="header-how-to-play">HOW TO PLAY</h1>
+        <img
+          class="arrow-key-how-to-play"
+          src="./Images/arrowkeys.png"
+          alt="arrow-keys"
+        />
+        <h3 class="text-how-to-play">
+          USE THE ARROW KEYS TO HELP TIMMY NOT GET ABDUCTED! <br />GOOD LUCK!
+        </h3>
+      </fieldset>
     </div>
   </body>
 </html>
