--- a/gameover.html
+++ b/gameover.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="./css/gameover.css" />
+    <link rel="stylesheet" type="media" href="./css/gameover.css" />
   </head>
 
   <body>
