cleaned up the code

--- a/gameover.html
+++ b/gameover.html
@@ -8,8 +8,8 @@
   </head>
 
   <body>
-    <div class="blah"><h1 class="foo">GAME OVER</h1></div>
-    <div class="randy">
+    <div class="wrapper"><h1 class="text">GAME OVER</h1></div>
+    <div class="links-wrapper">
       <a class="links" href="game.html"> <h2>Play again?</h2> </a>
       <a class="links" href="index.html"> <h2>Go back to main page</h2> </a>
     </div>
