--- a/game.html
+++ b/game.html
@@ -11,19 +11,12 @@
   <body>
     <div class="wrapper">
       <div class="canvas-container">
-        <!-- <canvas id="game-board" width="500" height="600"></canvas> -->
-        <canvas id="canvas"></canvas> <canvas id="canvas-cow"></canvas>
+        <canvas id="canvas"></canvas>
+        <canvas id="canvas-character"></canvas>
         <canvas id="canvas-ufo"></canvas>
-        <!-- <canvas id="canvas-laser"></canvas> -->
       </div>
-      <!-- <div class="game-title"><h1>Last Man On Earth</h1></div>
-      <!-- Canvas-container -->
-      <!-- <button><a href="index.html">Go Back to Main Page</a></button> -->
-    <!-- </div> -->
-    -->
-    <!-- wrapper -->
+    </div>
 
-    <!-- <script src="./js/score.js"></script> -->
     <script src="./js/background.js"></script>
     <script src="./js/obstacle.js"></script>
     <script src="./js/ufo.js"></script>
